compiler/src/test/resources/amyc/typer/failing/ArithError3.amy
object ArithError3
  "" * 42
end ArithError3
